# cxlkvs

./: .gitignore  CMakeLists.txt  Readme  main.cpp  rmshm.sh  run.sh  sum.cpp  sum.h
CXLKVS/: cxlkvs  cxlkvs.cpp  cxlkvs.h  fred.h  insert  insert.cpp  main.cpp  meta  meta.cpp  meta.h  objectindex  objectindex.cpp  objectindex.h  params.h
Test/: ec.cpp  ec_ipu  ec_ipu.cpp  ec_ipu2  ec_ipu2.cpp  ec_repair  ec_repair.cpp  ec_repair2  ec_repair2.cpp  ectest.cpp  t2  t2.cpp  t3  t3.cpp  t4  t4.cpp  t5  t5.cpp  t6  t6.cpp  t7  t7.cpp  t8  t8.cpp  t9  t9.cpp  test
include/: bufferqueue.h  cxlkvs.h  meta.h  objectindex.h  stripe_index.h  update.h  utils.h
src/: bufferqueue.cpp  cxlkvs.cpp  inplace.cpp  insert.cpp  main.cpp  meta.cpp  objectindex.cpp  stripe_index.cpp  update.cpp  utils.cpp
test/: kvs_test.cpp  object_index_test.cpp  thread_contact.cpp
timeTest/: cxlmem  cxlmem.cpp  mem.cpp  memcached.cpp
workloadGen/: gen_workload.py  readme  t1.sh  t2.sh  workload_gen.ipynb  workload_gen.py
workloadGen/workload_spec/: workloada  workloadb  workloadc  workloadd  workloade  workloadf  workloadr  workloadu  workloadu20  workloadu30  workloadu5  workloadu50
workloadGen/workload_spec2/: workloada
workloadGen/workloads/: ycsb_load_workloada  ycsb_txn_workloada
workloadGen/workloads_arrange/: ycsb_load_workloada  ycsb_txn_workloada
